[gd_scene load_steps=11 format=3 uid="uid://1poh8f1r28o7"]

[ext_resource type="Script" path="res://scripts/world.gd" id="1_ef30a"]
[ext_resource type="Texture2D" uid="uid://bthrqmm7w3hq8" path="res://sprites/tilesets/plains.png" id="1_o0hac"]
[ext_resource type="Texture2D" uid="uid://be8hpvui74nh5" path="res://sprites/tilesets/grass.png" id="2_bvgu7"]
[ext_resource type="Texture2D" uid="uid://b4l35wviwhmqd" path="res://sprites/objects/objects.png" id="3_xucgc"]
[ext_resource type="PackedScene" uid="uid://c6pkwykb1u1ws" path="res://scenes/player.tscn" id="4_5bd11"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_nog5w"]
texture = ExtResource("2_bvgu7")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_gy48l"]
texture = ExtResource("3_xucgc")
0:0/0 = 0
0:0/0/y_sort_origin = 4
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-5.5, 6.25, -5.75, 3.875, 5.375, 3.875, 5.125, 6.125)
5:0/0 = 0
5:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:0/0/physics_layer_0/angular_velocity = 0.0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-6.875, 6.375, 6.75, 6.25, 6.875, -5.375, -6.875, -5)
6:0/0 = 0
6:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:0/0/physics_layer_0/angular_velocity = 0.0
7:0/0 = 0
7:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:0/0/physics_layer_0/angular_velocity = 0.0
8:0/0 = 0
8:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:0/0/physics_layer_0/angular_velocity = 0.0
9:0/0 = 0
9:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:0/0/physics_layer_0/angular_velocity = 0.0
10:0/0 = 0
10:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:0/0/physics_layer_0/angular_velocity = 0.0
11:0/0 = 0
11:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:0/0/physics_layer_0/angular_velocity = 0.0
0:1/0 = 0
0:1/0/y_sort_origin = 4
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-2.875, 8, -8, 2.875, -8, -1, -2.125, -7, 2.25, -8, 7, -1.875, 8, 6.125, 4.75, 8)
11:2/0 = 0
11:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:2/0/physics_layer_0/angular_velocity = 0.0
11:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, -8, -8, 8, -8, 8, 8)
11:3/0 = 0
11:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:3/0/physics_layer_0/angular_velocity = 0.0
11:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, -8, -8, 8, -8, 8, 8)
0:5/size_in_atlas = Vector2i(3, 4)
0:5/0 = 0
0:5/0/y_sort_origin = 23
0:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:5/0/physics_layer_0/angular_velocity = 0.0
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-11, 23.25, -11.25, 12, 3.5, 10.5, 12, 17.25, 11.25, 24.75, -2.25, 28)
6:7/size_in_atlas = Vector2i(2, 2)
6:7/0 = 0
6:7/0/y_sort_origin = 5
6:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:7/0/physics_layer_0/angular_velocity = 0.0
6:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-15, 11.75, -14.25, 2.5, 14.25, 4.75, 13.5, 14.5, 5.75, 16.25, -6.25, 16)
8:6/size_in_atlas = Vector2i(2, 3)
8:6/0 = 0
8:6/0/y_sort_origin = 12
8:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:6/0/physics_layer_0/angular_velocity = 0.0
8:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-6, 15.5, -1.5, 14.75, 5.25, 16.5, 7.75, 20.5, -0.25, 22, -6.75, 19.75)
10:7/size_in_atlas = Vector2i(2, 2)
10:7/0 = 0
10:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:7/0/physics_layer_0/angular_velocity = 0.0
10:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-11.75, -3, -0.5, -8, 8, -5.75, 11.5, 1.5, 8.5, 10.75, -6.25, 8, -12, 6.75)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_eobi1"]
texture = ExtResource("1_o0hac")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
4:0/0 = 0
4:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:0/0/physics_layer_0/angular_velocity = 0.0
5:0/0 = 0
5:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:0/0/physics_layer_0/angular_velocity = 0.0
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
4:1/0 = 0
4:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:1/0/physics_layer_0/angular_velocity = 0.0
5:1/0 = 0
5:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:1/0/physics_layer_0/angular_velocity = 0.0
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
3:2/0 = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0
4:2/0 = 0
4:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:2/0/physics_layer_0/angular_velocity = 0.0
5:2/0 = 0
5:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:2/0/physics_layer_0/angular_velocity = 0.0
0:3/0 = 0
0:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:3/0/physics_layer_0/angular_velocity = 0.0
1:3/0 = 0
1:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:3/0/physics_layer_0/angular_velocity = 0.0
2:3/0 = 0
2:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:3/0/physics_layer_0/angular_velocity = 0.0
3:3/0 = 0
3:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:3/0/physics_layer_0/angular_velocity = 0.0
0:4/0 = 0
0:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:4/0/physics_layer_0/angular_velocity = 0.0
1:4/0 = 0
1:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:4/0/physics_layer_0/angular_velocity = 0.0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:4/0 = 0
2:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:4/0/physics_layer_0/angular_velocity = 0.0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:4/0 = 0
3:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:4/0/physics_layer_0/angular_velocity = 0.0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:4/0 = 0
4:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:4/0/physics_layer_0/angular_velocity = 0.0
5:4/0 = 0
5:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:4/0/physics_layer_0/angular_velocity = 0.0
0:5/0 = 0
0:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:5/0/physics_layer_0/angular_velocity = 0.0
1:5/0 = 0
1:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:5/0/physics_layer_0/angular_velocity = 0.0
1:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:5/0 = 0
2:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:5/0/physics_layer_0/angular_velocity = 0.0
2:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:5/0 = 0
3:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:5/0/physics_layer_0/angular_velocity = 0.0
3:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:5/0 = 0
4:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:5/0/physics_layer_0/angular_velocity = 0.0
5:5/0 = 0
5:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:5/0/physics_layer_0/angular_velocity = 0.0
0:6/0 = 0
0:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:6/0/physics_layer_0/angular_velocity = 0.0
1:6/0 = 0
1:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:6/0/physics_layer_0/angular_velocity = 0.0
1:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4.875, -8, 8, -8, 8, 8, -4.75, 3.75)
2:6/0 = 0
2:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:6/0/physics_layer_0/angular_velocity = 0.0
2:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4.875, -8, 8, -8, 8, 8, -4.75, 3.75)
3:6/0 = 0
3:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:6/0/physics_layer_0/angular_velocity = 0.0
3:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:6/0 = 0
4:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:6/0/physics_layer_0/angular_velocity = 0.0
5:6/0 = 0
5:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:6/0/physics_layer_0/angular_velocity = 0.0
0:7/0 = 0
0:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:7/0/physics_layer_0/angular_velocity = 0.0
0:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:7/0 = 0
1:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:7/0/physics_layer_0/angular_velocity = 0.0
2:7/0 = 0
2:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:7/0/physics_layer_0/angular_velocity = 0.0
3:7/0 = 0
3:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:7/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_qiyi0"]
physics_layer_0/collision_layer = 1
sources/9 = SubResource("TileSetAtlasSource_eobi1")
sources/10 = SubResource("TileSetAtlasSource_nog5w")
sources/11 = SubResource("TileSetAtlasSource_gy48l")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c5la3"]
size = Vector2(44, 45)

[node name="World" type="Node2D"]
script = ExtResource("1_ef30a")

[node name="TileMap" type="TileMap" parent="."]
y_sort_enabled = true
texture_filter = 1
tile_set = SubResource("TileSet_qiyi0")
format = 2
layer_0/name = "ground"
layer_0/tile_data = PackedInt32Array(0, 327689, 0, 65536, 65545, 1, 131072, 65545, 1, 196608, 65545, 1, 262144, 65545, 2, 327680, 10, 0, 393216, 10, 0, 458752, 10, 0, 524288, 10, 0, 1, 262153, 1, 65537, 131081, 1, 131073, 131081, 1, 196609, 131081, 1, 262145, 131081, 2, 327681, 10, 0, 393217, 10, 0, 458753, 10, 0, 524289, 10, 0, 2, 131081, 0, 65538, 131081, 1, 131074, 131081, 1, 196610, 131081, 1, 262146, 131081, 2, 327682, 10, 0, 393218, 10, 0, 458754, 10, 0, 524290, 10, 0, 3, 131081, 0, 65539, 131081, 1, 131075, 131081, 1, 196611, 131081, 1, 262147, 131081, 2, 327683, 10, 0, 393219, 10, 0, 458755, 10, 0, 524291, 10, 0, 4, 131081, 0, 65540, 131081, 1, 131076, 131081, 1, 196612, 131081, 1, 262148, 327689, 0, 327684, 65545, 1, 393220, 65545, 1, 458756, 65545, 1, 524292, 65545, 2, 5, 131081, 0, 65541, 131081, 1, 131077, 131081, 1, 196613, 131081, 1, 262149, 131081, 1, 327685, 131081, 1, 393221, 131081, 1, 458757, 131081, 1, 524293, 131081, 2, 6, 131081, 0, 65542, 131081, 1, 131078, 131081, 1, 196614, 131081, 1, 262150, 131081, 1, 327686, 131081, 1, 393222, 131081, 1, 458758, 131081, 1, 524294, 131081, 2, 7, 131081, 0, 65543, 131081, 1, 131079, 131081, 1, 196615, 131081, 1, 262151, 131081, 1, 327687, 131081, 1, 393223, 131081, 1, 458759, 131081, 1, 524295, 131081, 2, 8, 131081, 0, 65544, 131081, 1, 131080, 131081, 1, 196616, 131081, 1, 262152, 131081, 1, 327688, 131081, 1, 393224, 131081, 1, 458760, 131081, 1, 524296, 131081, 2, 9, 131081, 0, 65545, 131081, 1, 131081, 131081, 1, 196617, 131081, 1, 262153, 131081, 1, 327689, 131081, 1, 393225, 131081, 1, 458761, 131081, 1, 524297, 131081, 2, 10, 327689, 1, 65546, 131081, 1, 131082, 131081, 1, 196618, 131081, 1, 262154, 131081, 1, 327690, 131081, 1, 393226, 131081, 1, 458762, 131081, 1, 524298, 327689, 0, 11, 131081, 1, 65547, 131081, 1, 131083, 131081, 1, 196619, 131081, 1, 262155, 131081, 1, 327691, 131081, 1, 393227, 131081, 1, 458763, 131081, 1, 524299, 131081, 1, 12, 262153, 1, 65548, 131081, 1, 131084, 131081, 1, 196620, 131081, 1, 262156, 131081, 1, 327692, 131081, 1, 393228, 131081, 1, 458764, 131081, 1, 524300, 131081, 1, 13, 131081, 0, 65549, 131081, 1, 131085, 131081, 1, 196621, 131081, 1, 262157, 131081, 1, 327693, 131081, 1, 393229, 131081, 1, 458765, 131081, 1, 524301, 131081, 1, 14, 327689, 1, 65550, 131081, 1, 131086, 131081, 1, 196622, 131081, 1, 262158, 131081, 1, 327694, 131081, 1, 393230, 131081, 1, 458766, 131081, 1, 524302, 131081, 1, 589824, 10, 0, 655360, 10, 0, 720896, 10, 0, 786432, 10, 0, 851968, 10, 0, 589825, 10, 0, 655361, 10, 0, 720897, 10, 0, 786433, 10, 0, 851969, 10, 0, 589826, 10, 0, 655362, 10, 0, 720898, 10, 0, 786434, 10, 0, 851970, 10, 0, 589827, 10, 0, 655363, 10, 0, 720899, 10, 0, 786435, 10, 0, 851971, 10, 0, 589828, 10, 0, 655364, 10, 0, 720900, 10, 0, 786436, 10, 0, 851972, 10, 0, 589829, 10, 0, 655365, 10, 0, 720901, 10, 0, 786437, 10, 0, 851973, 10, 0, 589830, 10, 0, 655366, 10, 0, 720902, 10, 0, 786438, 10, 0, 851974, 10, 0, 589831, 10, 0, 655367, 10, 0, 720903, 10, 0, 786439, 10, 0, 851975, 10, 0, 589832, 10, 0, 655368, 10, 0, 720904, 10, 0, 786440, 10, 0, 851976, 10, 0, 589833, 10, 0, 655369, 10, 0, 720905, 10, 0, 786441, 10, 0, 851977, 10, 0, 589834, 65545, 1, 655370, 65545, 2, 720906, 10, 0, 786442, 10, 0, 851978, 10, 0, 589835, 131081, 1, 655371, 131081, 2, 720907, 10, 0, 786443, 10, 0, 851979, 10, 0, 589836, 131081, 1, 655372, 131081, 2, 720908, 10, 0, 786444, 10, 0, 851980, 10, 0, 589837, 131081, 1, 655373, 131081, 2, 720909, 10, 0, 786445, 10, 0, 851981, 10, 0, 589838, 131081, 1, 655374, 131081, 2, 720910, 10, 0, 786446, 10, 0, 851982, 10, 0, 15, 131081, 1, 65551, 131081, 1, 131087, 131081, 1, 196623, 131081, 1, 262159, 131081, 1, 327695, 131081, 1, 393231, 131081, 1, 458767, 131081, 1, 524303, 131081, 1, 589839, 131081, 1, 655375, 131081, 2, 720911, 10, 0, 786447, 10, 0, 851983, 10, 0, 16, 131081, 1, 65552, 131081, 1, 131088, 131081, 1, 196624, 131081, 1, 262160, 131081, 1, 327696, 131081, 1, 393232, 131081, 1, 458768, 131081, 1, 524304, 131081, 1, 589840, 131081, 1, 655376, 131081, 2, 720912, 10, 0, 786448, 10, 0, 851984, 10, 0, 17, 131081, 1, 65553, 131081, 1, 131089, 131081, 1, 196625, 131081, 1, 262161, 131081, 1, 327697, 131081, 1, 393233, 131081, 1, 458769, 131081, 1, 524305, 131081, 1, 589841, 131081, 1, 655377, 131081, 2, 720913, 10, 0, 786449, 10, 0, 851985, 10, 0, 18, 131081, 1, 65554, 131081, 1, 131090, 131081, 1, 196626, 131081, 1, 262162, 131081, 1, 327698, 131081, 1, 393234, 131081, 1, 458770, 131081, 1, 524306, 131081, 1, 589842, 131081, 1, 655378, 131081, 2, 720914, 10, 0, 786450, 10, 0, 851986, 10, 0, 19, 131081, 1, 65555, 131081, 1, 131091, 131081, 1, 196627, 131081, 1, 262163, 131081, 1, 327699, 131081, 1, 393235, 131081, 1, 458771, 131081, 1, 524307, 131081, 1, 589843, 131081, 1, 655379, 131081, 2, 720915, 10, 0, 786451, 10, 0, 851987, 10, 0, 20, 131081, 1, 65556, 131081, 1, 131092, 131081, 1, 196628, 131081, 1, 262164, 131081, 1, 327700, 131081, 1, 393236, 131081, 1, 458772, 131081, 1, 524308, 131081, 1, 589844, 131081, 1, 655380, 131081, 2, 720916, 10, 0, 786452, 10, 0, 851988, 10, 0, 21, 131081, 1, 65557, 131081, 1, 131093, 131081, 1, 196629, 131081, 1, 262165, 131081, 1, 327701, 131081, 1, 393237, 131081, 1, 458773, 131081, 1, 524309, 131081, 1, 589845, 131081, 1, 655381, 131081, 2, 720917, 10, 0, 786453, 10, 0, 851989, 10, 0)
layer_1/name = "cliff"
layer_1/tile_data = PackedInt32Array(15, 65545, 4, 65551, 65545, 5, 131087, 65545, 6, 16, 131081, 4, 65552, 131081, 5, 131088, 131081, 6, 17, 131081, 4, 65553, 131081, 5, 131089, 131081, 6, 65548, 0, 7, 131092, 131081, 6, 131090, 131081, 6, 131091, 131081, 6, 65556, 131081, 5, 20, 131081, 4, 65555, 131081, 5, 65554, 131081, 5, 19, 131081, 4, 18, 131081, 4, 21, 196617, 4, 65557, 196617, 5, 131093, 196617, 6, 14, 9, 7)
layer_2/name = "ysort"
layer_2/y_sort_enabled = true
layer_2/z_index = 10
layer_2/tile_data = PackedInt32Array(65539, 327691, 0, 131077, 327691, 0, 327688, 11, 1, 196621, 11, 1, 65553, 11, 1, 589828, 11, 1, 9, 11, 0, 65555, 327691, 0, 327695, 327691, 0, 13, 11, 0, 65545, 11, 1, 131081, 11, 1, 131085, 11, 1, 65549, 11, 1, 196617, 11, 1, 655366, 11, 5, 786446, 524299, 6, 458757, 655371, 7, 327692, 655371, 7, 524303, 655371, 7, 458754, 393227, 7, 786442, 393227, 7, 720915, 11, 5, 720898, 524299, 6)

[node name="Player" parent="TileMap" instance=ExtResource("4_5bd11")]
y_sort_enabled = false
position = Vector2(168, 123)

[node name="Collisions" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Collisions"]
polygon = PackedVector2Array(-54, 0, 159, 0, 159, -46, 204, -46, 204, 0, 242, 0, 242, 47, 352, 46, 352, 224, 0, 225, -1, 0, -54, 235, 55, 284, 421, 276, 402, -37, 332, -155, 101, -154)

[node name="CliffSideTransition" type="Area2D" parent="."]
position = Vector2(181, -24)

[node name="CollisionShape2D" type="CollisionShape2D" parent="CliffSideTransition"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_c5la3")

[node name="SpawnTimer" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="CliffSideTransition" to="." method="_on_cliff_side_transition_body_entered"]
[connection signal="body_exited" from="CliffSideTransition" to="." method="_on_cliff_side_transition_body_exited"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
